samples/_failures_safe/1761224152_225889_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38bce718.c: In function ‘next_token’:
./samples/SAFE/__tmp_38bce718.c:152:9: error: expected expression at end of input
  152 |         if (
      |         ^~
./samples/SAFE/__tmp_38bce718.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38bce718.c:152:9: error: expected declaration or statement at end of input
